--- a/Templates/home.html
+++ b/Templates/home.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <div class="container">
-        <h3 class="pt-5 text-center">Django ToDo App</h3>
+        <h3 class="pt-5 text-center">ToDo App</h3>
         <div class="row">
             <h4>My Day</h4>
             <p class="text-muted">{% now "jS F Y" %}</p>
@@ -31,9 +31,9 @@
                     <div class="card-body">
                         {{task.taskname}}
                         <span style="position: relative; float: right;">
-                            <a class="btn btn-success"><i class="fa fa-check"></i> Mark as Done</a>
-                            <a class="btn btn-danger"><i class="fa fa-trash"></i></a>
-                            <a class="btn btn-primary"><i class="fa fa-pencil"></i></a>
+                            <a  class="btn btn-success" href="{% url 'markasdone' task.pk %}"><i class="fa fa-check"></i> Mark as Done</a>
+                            <a class="btn btn-danger" href="{% url 'deletetask' task.pk %}"><i class="fa fa-trash"></i></a>
+                            <a class="btn btn-primary" href="{% url 'updatetask' task.pk %}"><i class="fa fa-pencil"></i></a>
                         </span>
                     </div>
                 </div>
@@ -45,11 +45,18 @@
             <div class="col-md-5 col-lg-5">
                 <h5>Completed Tasks</h5>
                 <!-- List of all the tasks that have completed -->
+                 {% for task in completedtask %}
                 <div class="card m-1">
                     <div class="card-body">
-                        This is the completed task.
+                        {{task.taskname}}
+                        <span style="position: relative; float: right;">
+                            <a  class="btn btn-danger" href="{% url 'markasundone' task.pk %}"><i class="fa fa-times"></i> Mark as Undone</a>
+                            
+                        </span>
+                        
                     </div>
                 </div>
+                {%endfor%}
             </div>
             
         </div>
